--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel='stylesheet' href='style.css'>
     </head>
     <body class='container'>
-        <img id='main-img'>
+        <img id='main-img' src="./src/Load_1000000000.jpg">
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
         <script src='./main.js'></script>
     </body>
