Add fullscreen button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <link rel='stylesheet' href='style.css'>
     </head>
     <body class='container'>
+        <button
+            class='button'
+            id='button-fullscreen'
+            onclick='enterFullscreen()'
+        >
+            전체화면으로 보기
+        </button>
         <img id='main-img' src="./src/Load_1000000000.jpg">
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
         <script src='./main.js'></script>
