--- a/index.html
+++ b/index.html
@@ -1,51 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>KR - UNICON 2020</title>
-        <link rel='stylesheet' href='style.css'>
-    </head>
-    <body class='container'>
-        <button
-            class='button'
-            id='button-fullscreen'
-            onclick='enterFullscreen()'
-        >
-            전체화면으로 보기
-        </button>
-        <div id="fullpage">
-            <nav class="navigation">
-                UNICON
-                <span class="navigation-item">ANYTHINGBE</span>
-                <span class="navigation-item">UNIHACK</span>
-                <span class="navigation-item">MILESTONES</span>
-                <span class="navigation-item">MISSIONS</span>
-                <span class="navigation-item" onclick="changeFrame(660)">AIM</span>
-            </nav>
-            <div class="section" id="section0">
-                <img class='main-img' src="./src/Load_1000000000.jpg">
-            </div>
-            <div class="section" id="section1">
-                <h1>MEMBERS</h1>
-                <div class="member-wrapper">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                    <img class="member" src="jwy.png">
-                </div>
-            </div>
-            <div class="section" id="section2">
-                <img class='main-img' src="./src/Load_1000000000.jpg">
-            </div>
-        </div>
-        <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
-        <script src="https://unicon-dimigo.github.io/aim-landing/assets/js/fullpage.min.js"></script>
-        <script src='./main.js'></script>
-    </body>
+<head>
+  <title>KR - UNICON 2020</title>
+  <link rel='stylesheet' href='/assets/styles/style.css'>
+  <link rel='apple-touch-icon' sizes='57x57' href='/apple-icon-57x57.png'>
+  <link rel='apple-touch-icon' sizes='60x60' href='/apple-icon-60x60.png'>
+  <link rel='apple-touch-icon' sizes='72x72' href='/apple-icon-72x72.png'>
+  <link rel='apple-touch-icon' sizes='76x76' href='/apple-icon-76x76.png'>
+  <link rel='apple-touch-icon' sizes='114x114' href='/apple-icon-114x114.png'>
+  <link rel='apple-touch-icon' sizes='120x120' href='/apple-icon-120x120.png'>
+  <link rel='apple-touch-icon' sizes='144x144' href='/apple-icon-144x144.png'>
+  <link rel='apple-touch-icon' sizes='152x152' href='/apple-icon-152x152.png'>
+  <link rel='apple-touch-icon' sizes='180x180' href='/apple-icon-180x180.png'>
+  <link rel='icon' type='image/png' sizes='192x192' href='/android-icon-192x192.png'>
+  <link rel='icon' type='image/png' sizes='32x32' href='/favicon-32x32.png'>
+  <link rel='icon' type='image/png' sizes='96x96' href='/favicon-96x96.png'>
+  <link rel='icon' type='image/png' sizes='16x16' href='/favicon-16x16.png'>
+  <link rel='manifest' href='/manifest.json'>
+  <meta charset='UTF-8'>
+  <meta name='msapplication-TileColor' content='#ffffff'>
+  <meta name='msapplication-TileImage' content='/ms-icon-144x144.png'>
+  <meta name='theme-color' content='#000000'>
+  <meta name='author' content='uhmtoto'>
+  <meta name='publisher' content='UNICON DEV'>
+  <meta name='distribution' content='UNICON 2020'>
+</head>
+
+<body class='container'>
+  <div id='fullpage'>
+    <nav class='navigation'>
+      UNICON
+      <span class='navigation-item'>ANYTHINGBE</span>
+      <span class='navigation-item'>UNIHACK</span>
+      <span class='navigation-item'>MILESTONES</span>
+      <span class='navigation-item'>MISSIONS</span>
+      <span class='navigation-item' onclick='changeFrame(660)'>AIM</span>
+    </nav>
+    <div class='section' id='section0'>
+      <img class='main-img' src='/src/Load_1000000000.jpg'>
+    </div>
+    <div class='section' id='section1'>
+      <h1>MEMBERS</h1>
+      <div class='member-wrapper'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='/assets/images/members/18HDJWY.png'>
+      </div>
+    </div>
+    <div class='section' id='section2'>
+      <img class='main-img' src='/src/Load_1000000000.jpg'>
+    </div>
+  </div>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+  <script src='/assets/scripts/fullpage.min.js'></script>
+  <script src='/assets/scripts/main.js'></script>
+</body>
 </html>
