--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>KR - UNICON 2020</title>
-  <link rel='stylesheet' href='/assets/styles/style.css'>
+  <link rel='stylesheet' href='./assets/styles/style.css'>
   <link rel='apple-touch-icon' sizes='57x57' href='/apple-icon-57x57.png'>
   <link rel='apple-touch-icon' sizes='60x60' href='/apple-icon-60x60.png'>
   <link rel='apple-touch-icon' sizes='72x72' href='/apple-icon-72x72.png'>
@@ -28,39 +28,62 @@
 
 <body class='container'>
   <div id='fullpage'>
-    <nav class='navigation'>
-      UNICON
-      <span class='navigation-item'>ANYTHINGBE</span>
-      <span class='navigation-item'>UNIHACK</span>
-      <span class='navigation-item'>MILESTONES</span>
-      <span class='navigation-item'>MISSIONS</span>
-      <span class='navigation-item' onclick='changeFrame(660)'>AIM</span>
-    </nav>
     <div class='section' id='section0'>
-      <img class='main-img' src='/src/Load_1000000000.jpg'>
+      <nav class='navigation'>
+        <div class="brand-wrapper">
+          <img class="brand" src="assets/images/logo2.png">
+          UNICON
+        </div>
+        <span class='navigation-item' onclick='changeFrame(660)'>AIM</span>
+        <span class='navigation-item' onclick='changeFrame(750)'>ANYTHINGBE</span>
+        <span class='navigation-item' onclick='changeFrame(876)'>UNIHACK</span>
+      </nav>
+      <img class='main-img' src='./src/Load_1000000000.jpg'>
     </div>
     <div class='section' id='section1'>
       <h1>MEMBERS</h1>
       <div class='member-wrapper'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
-        <img class='member' src='/assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/18HDJWY.png'>
       </div>
     </div>
     <div class='section' id='section2'>
-      <img class='main-img' src='/src/Load_1000000000.jpg'>
+      <nav class='navigation'>
+        <div class="brand-wrapper">
+          <img class="brand" src="assets/images/logo2.png">
+          UNICON
+        </div>
+        <span class='navigation-item' onclick='changeFrame(1124)'>MILESTONE</span>
+        <span class='navigation-item' onclick='changeFrame(1817)'>MISSION</span>
+      </nav>
+      <img class='main-img' src='./src/Load_1000000000.jpg'>
+    </div>
+    <div class='section' id='section3'>
+      <div class="title">
+        <img class="logo" src="./assets/images/logo.png">
+        <h1>CONTACT</h1>
+        <div class="contact-1">
+          <a href="https://www.facebook.com/%EC%9C%A0%EB%8B%88%EC%BD%98-UNIverse-CONquest-316272942366152"><h1>FACEBOOK.</h1></a>
+          <a href="https://www.instagram.com/unicon_dimigo/"><h1>INSTAGRAM.</h1></a>
+        </div>
+        <div class="contact-2">
+          <h1>. dimiunicon18@gmail.com</h1>
+          <h1>. 010-3017-3106</h1>
+        </div>
+      </div>
     </div>
   </div>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
-  <script src='/assets/scripts/fullpage.min.js'></script>
-  <script src='/assets/scripts/main.js'></script>
+  <script src='./assets/scripts/fullpage.min.js'></script>
+  <script src='./assets/scripts/main.js'></script>
 </body>
 </html>
