--- a/index.html
+++ b/index.html
@@ -41,16 +41,26 @@
       <img class='main-img' src='./src/Load_1000000000.jpg'>
     </div>
     <div class='section' id='section1'>
-      <h1>MEMBERS</h1>
+      <h1 style="margin-top: 40px;">MEMBERS</h1>
       <div class='member-wrapper'>
+        <div class="category-wrapper"> 
+          <span class="category">Project Planners</span>
+          <img class='member' src='./assets/images/members/18HDJWY.png'>
+        </div>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <div class="category-wrapper"> 
+          <span class="category">Designers</span>
+          <img class='member' src='./assets/images/members/18HDJWY.png'>
+        </div>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <div class="category-wrapper"> 
+          <span class="category">Web Programmers & Hackers</span>
+          <img class='member' src='./assets/images/members/18HDJWY.png'>
+        </div>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
         <img class='member' src='./assets/images/members/18HDJWY.png'>
