--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <img class="brand" src="assets/images/logo2.png">
           UNICON
         </div>
-        <span class='navigation-item' onclick='changeFrame(693)'>AIM</span>
-        <span class='navigation-item' onclick='changeFrame(820)'>ANYTHINGBE</span>
-        <span class='navigation-item' onclick='changeFrame(924)'>UNIHACK</span>
+        <span style="cursor: pointer" class='navigation-item' onclick='changeFrame(693)'>AIM</span>
+        <span style="cursor: pointer" class='navigation-item' onclick='changeFrame(820)'>ANYTHINGBE</span>
+        <span style="cursor: pointer" class='navigation-item' onclick='changeFrame(924)'>UNIHACK</span>
       </nav>
       <img class='main-img' src='./src/Load_1000000000.jpg'>
     </div>
