--- a/index.html
+++ b/index.html
@@ -45,25 +45,27 @@
       <div class='member-wrapper'>
         <div class="category-wrapper"> 
           <span class="category">Project Planners</span>
-          <img class='member' src='./assets/images/members/18HDJWY.png'>
+          <img class='member' src='./assets/images/members/오영준.png'>
         </div>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/정원영.png'>
+        <img class='member' src='./assets/images/members/김태은.png'>
+        <dummy></dummy>
         <div class="category-wrapper"> 
           <span class="category">Designers</span>
-          <img class='member' src='./assets/images/members/18HDJWY.png'>
+          <img class='member' src='./assets/images/members/김한표.png'>
         </div>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/장서윤.png'>
+        <dummy></dummy>
+        <dummy></dummy>
         <div class="category-wrapper"> 
           <span class="category">Web Programmers & Hackers</span>
-          <img class='member' src='./assets/images/members/18HDJWY.png'>
+          <img class='member' src='./assets/images/members/엄서훈.png'>
         </div>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
-        <img class='member' src='./assets/images/members/18HDJWY.png'>
+        <img class='member' src='./assets/images/members/문형일.png'>
+        <img class='member' src='./assets/images/members/이주헌.png'>
+        <img class='member' src='./assets/images/members/김경범.png'>
+        <img class='member' src='./assets/images/members/오승주.png'>
+        <img class='member' src='./assets/images/members/이영석.png'>
       </div>
     </div>
     <div class='section' id='section2'>
