fixed contact page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <span class='navigation-item' onclick='if(!loadFinish) {return} forced=true; fullpage_api.moveTo(1);'>MEMBERS</span>
         <span class='navigation-item' onclick='if(!loadFinish) {return} forced=true; fullpage_api.moveTo(2); changeFrame(1014);'>MILESTONE</span>
         <span class='navigation-item' onclick='if(!loadFinish) {return} forced=true; fullpage_api.moveTo(2); changeFrame(1827);'>MISSION</span>
+        <span class='navigation-item' onclick='if(!loadFinish) {return} forced=true; fullpage_api.moveTo(3);'>CONTACT</span>
       </nav>
       <img class='main-img' src='./src/Load_1000000000.jpg'>
     </div>
@@ -84,17 +85,29 @@
           <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(1);'>MEMBERS</span>
           <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(2); changeFrame(1014);'>MILESTONE</span>
           <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(2); changeFrame(1827);'>MISSION</span>
+          <span class='navigation-item' onclick='if(!loadFinish) {return} forced=true; fullpage_api.moveTo(3);'>CONTACT</span>
         </nav>
       </nav>
       <img class='main-img' src='./src/Load_1000000000.jpg'>
     </div>
     <div class='section' id='section3'>
+      <nav class="navigation">
+        <nav>
+          <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(0); changeFrame(693);'>AIM</span>
+          <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(0); changeFrame(820);'>ANYTHINGBE</span>
+          <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(0); changeFrame(924);'>UNIHACK</span>
+          <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(1);'>MEMBERS</span>
+          <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(2); changeFrame(1014);'>MILESTONE</span>
+          <span class='navigation-item' onclick='forced=true; fullpage_api.moveTo(2); changeFrame(1827);'>MISSION</span>
+          <span class='navigation-item' onclick='if(!loadFinish) {return} forced=true; fullpage_api.moveTo(3);'>CONTACT</span>
+        </nav>
+      </nav>
       <div class="title">
         <img class="logo" src="./assets/images/logo.png">
         <h1>CONTACT</h1>
         <div class="contact-1">
-          <a href="https://www.facebook.com/%EC%9C%A0%EB%8B%88%EC%BD%98-UNIverse-CONquest-316272942366152"><h1>FACEBOOK.</h1></a>
-          <a href="https://www.instagram.com/unicon_dimigo/"><h1>INSTAGRAM.</h1></a>
+          <a href="https://www.facebook.com/%EC%9C%A0%EB%8B%88%EC%BD%98-UNIverse-CONquest-316272942366152">FACEBOOK ←<br/></a>
+          <a href="https://www.instagram.com/unicon_dimigo/">INSTAGRAM ←</a>
         </div>
         <div class="contact-2">
           <h1>. dimiunicon18@gmail.com</h1>
