신규 멤버 오동혁 한은혜, 신규 디자이너 김경범

--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
         </div>
         <img class='member' src='./assets/images/members/정원영.png'>
         <img class='member' src='./assets/images/members/김태은.png'>
+        <img class='member' src='./assets/images/members/오동혁.png'>
         <dummy></dummy>
         <div class="category-wrapper"> 
           <span class="category">Designers</span>
           <img class='member' src='./assets/images/members/김한표.png'>
         </div>
         <img class='member' src='./assets/images/members/장서윤.png'>
-        <dummy></dummy>
+        <img class='member' src='./assets/images/members/한은혜.png'>
+        <img class='member' src='./assets/images/members/김경범.png'>
         <dummy></dummy>
         <div class="category-wrapper"> 
           <span class="category">Web Programmers & Hackers</span>
@@ -67,7 +69,6 @@
         </div>
         <img class='member' src='./assets/images/members/문형일.png'>
         <img class='member' src='./assets/images/members/이주헌.png'>
-        <img class='member' src='./assets/images/members/김경범.png'>
         <img class='member' src='./assets/images/members/오승주.png'>
         <img class='member' src='./assets/images/members/이영석.png'>
       </div>
