--- a/index.html
+++ b/index.html
@@ -26,12 +26,6 @@
   <meta name='distribution' content='UNICON 2020'>
 </head>
 <body class='container'>
-  <script>
-    if (window.innerWidth < 1300) {
-      alert("PC로 접속해 주세요 히이잉 🦄🦄🦄\n제가 개발을 더 공부해서 모바일도 지원하겠습니다. - 18HD엄서훈 -\n아니면 동아리에 들어와서 개발해 주세요❣️")
-      window.location = 'https://thumbs.dreamstime.com/b/cute-magic-unicon-rainbow-color-greeting-card-illustration-90822815.jpg'
-    }
-  </script>
   <div id='fullpage'>
     <div class='section' id='section0'>
       <nav class='navigation'>
@@ -124,6 +118,12 @@
   </div>
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+  <script>
+    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ? true : false) {
+      alert("PC로 접속해 주세요 히이잉 🦄🦄🦄\n제가 개발을 더 공부해서 모바일도 지원하겠습니다. - 18HD엄서훈 -\n아니면 동아리에 들어와서 개발해 주세요❣️")
+      window.location = 'https://thumbs.dreamstime.com/b/cute-magic-unicon-rainbow-color-greeting-card-illustration-90822815.jpg'
+    }
+  </script>
   <script src='./assets/scripts/fullpage.min.js'></script>
   <script src='./assets/scripts/main.js'></script>
 </body>
